Fourth Commit: Added npm, Lite server, .gitignore

--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Hello, World!</h1>
-        <p1>This is the first paragraph</p1>
-        <p1>This is the second paragraph</p1>
-    </body>
+<head>
+    <title>My Page</title>
+    <link rel="stylesheet" href="style.css">
+    <script>
+        function showMessage() {
+            alert("Have an awesome day! 🎉");
+        }   
+    </script>
+</head>
+<body>
+    <h1>Hello, Welcome! :D</h1>
+    <img src="img.jpg">
+    <br><br>
+    <button onclick="showMessage()">Click Me!</button>
+</body>
 </html>
